[gd_scene load_steps=10 format=3 uid="uid://cfujjws6uthy7"]

[ext_resource type="Script" uid="uid://cwq5o8jxofr5t" path="res://Knight_1/setting.gd" id="1_4tp35"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y32ns"]
bg_color = Color(0.491852, 0.342723, 0.243526, 1)
corner_radius_top_left = 21
corner_radius_top_right = 21
corner_radius_bottom_right = 21
corner_radius_bottom_left = 21

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wtcfe"]
bg_color = Color(0.227451, 0, 0, 1)
corner_radius_top_left = 21
corner_radius_top_right = 21
corner_radius_bottom_right = 21
corner_radius_bottom_left = 21

[sub_resource type="LabelSettings" id="LabelSettings_0e48y"]
line_spacing = 7.0
font_size = 52
font_color = Color(0.99, 0.99, 0.99, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y32ns"]

[sub_resource type="LabelSettings" id="LabelSettings_wtcfe"]
font_size = 32

[sub_resource type="StyleBoxLine" id="StyleBoxLine_y32ns"]
grow_begin = 0.0
grow_end = 0.0
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wtcfe"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_0e48y"]
color = Color(1, 1, 1, 1)
thickness = 6

[node name="setting" type="Panel"]
self_modulate = Color(1, 1, 1, 0.698039)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -643.0
offset_top = -368.0
offset_right = 106.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y32ns")
script = ExtResource("1_4tp35")

[node name="title" type="Label" parent="."]
layout_mode = 0
offset_right = 750.0
offset_bottom = 99.0
theme_override_styles/normal = SubResource("StyleBoxFlat_wtcfe")
text = "setting"
label_settings = SubResource("LabelSettings_0e48y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 59.0
offset_top = 145.0
offset_right = 337.0
offset_bottom = 448.0

[node name="music" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_y32ns")
text = "music               :"
label_settings = SubResource("LabelSettings_wtcfe")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer/music"]
layout_mode = 0
offset_left = 278.0
offset_top = -13.0
offset_right = 552.0
offset_bottom = 62.0
theme_override_styles/slider = SubResource("StyleBoxLine_y32ns")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_wtcfe")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_0e48y")
value = 50.0
ticks_on_borders = true

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="window" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_y32ns")
text = "window size   :"
label_settings = SubResource("LabelSettings_wtcfe")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="laguage" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_y32ns")
text = "language         :"
label_settings = SubResource("LabelSettings_wtcfe")
horizontal_alignment = 1
vertical_alignment = 1

[node name="back" type="Button" parent="."]
layout_mode = 0
offset_left = 206.0
offset_top = 393.0
offset_right = 577.0
offset_bottom = 472.0
action_mode = 0
text = "back"

[node name="window_size" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 225.0
offset_right = 604.0
offset_bottom = 264.0
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "1920*1080"
popup/item_0/id = 0
popup/item_1/text = "1600*900"
popup/item_1/id = 1
popup/item_2/text = "1280*720"
popup/item_2/id = 2

[node name="language" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 329.0
offset_top = 300.0
offset_right = 605.0
offset_bottom = 339.0
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "english"
popup/item_0/id = 0
popup/item_1/text = "arabic"
popup/item_1/id = 1
popup/item_2/text = "french"
popup/item_2/id = 2

[connection signal="value_changed" from="VBoxContainer/music/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="item_selected" from="window_size" to="." method="_on_window_size_item_selected"]
